@startuml

title __SERVLET's Class Diagram__\n

  package  {
    package servlet {
      class HomePageServlet {
          {static} - serialVersionUID : long
          + HomePageServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package servlet {
      class LoginServlet {
          {static} - serialVersionUID : long
          + LoginServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package servlet {
      class ManageMobilePhoneServlet {
          {static} - serialVersionUID : long
          + ManageMobilePhoneServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package servlet {
      class UpdateMobilePhoneInfoServlet {
          {static} - serialVersionUID : long
          + UpdateMobilePhoneInfoServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package servlet {
      class ViewMobilePhones {
          {static} - serialVersionUID : long
          + ViewMobilePhones()
          # doGet()
      }
    }
  }
  

  HomePageServlet -up-|> HttpServlet
  LoginServlet -up-|> HttpServlet
  ManageMobilePhoneServlet -up-|> HttpServlet
  UpdateMobilePhoneInfoServlet -up-|> HttpServlet
  ViewMobilePhones -up-|> HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
